#64 [1h] fix more PMD violations